[tool.poetry]
name = "pod-py"
version = "0.1.0"
description = "A simple CLI to create or manage a Kubernetes Pod."
authors = ["Guy Chait"]
readme = "README.md"
packages = [{include = "pod_py"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
kubernetes = "^29.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
bandit = "^1.7.6"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pod-py-new = "pod_py.cli:new_pod"
pod-py-manage = "pod_py.cli:existing_pod"

[tool.ruff]
select = ["E4", "E7", "E9", "F", "D1", "D4", "I", "N"]
